<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">krcam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="showVideo">Preview</string>
    <string name="startStreaming">Start</string>
    <string name="stopStreaming">Stop</string>
    <string name="empty"></string>
    <string name="mic">Mic</string>
    <string name="camera">Camera</string>
    <string name="videoBitrate">Video Bitrate (kb/s)</string>
    <string name="kbs">kb/s</string>
    <string name="audioQuality">Audio Quality (0-10)</string>
    <string name="stream">Stream to internet</string>
    <string name="both">Both</string>
    <string name="saveToSdcard">Saved to SDCARD</string>

</resources>